--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ scipy>=1.5.4
 torch>=1.7.0
 umap-learn>=0.4.6
 requests>=2.24.0
-flake8 >= 3.8.4
-black == 20.8b1
-
+flake8>=3.8.4
+black==20.8b1
+torchdyn>=0.2.2.1
+pytorch-lightning>=1.1.2
+git+https://github.com/google-research/torchsde.git
