--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ flake8>=3.8.4
 black==20.8b1
 torchdyn>=0.2.2.1
 pytorch-lightning>=1.1.2
-git+https://github.com/google-research/torchsde.git
+torchsde @ git+https://github.com/google-research/torchsde.git
