--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,10 @@ scikit-misc>=0.1.3
 scipy>=1.5.4
 torch>=1.7.0
 umap-learn>=0.4.6
-requests>=2.24.0
 flake8>=3.8.4
 black==20.8b1
 torchdyn>=0.2.2.1
 torchdiffeq>=0.2.1
 pytorch-lightning>=1.1.2
 torchsde @ git+https://github.com/google-research/torchsde.git
+hdviz @ git+https://github.com/jtimonen/hdviz.git
