--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ torchdiffeq>=0.2.1
 pytorch-lightning>=1.1.2
 torchsde @ git+https://github.com/google-research/torchsde.git
 hdviz @ git+https://github.com/jtimonen/hdviz.git
+
+tensorboard>=2.4.1
+dem~=0.0.3
+torchsde~=0.2.5
+hdviz~=0.0.5
+setuptools~=56.0.0
+scanpy~=1.7.2
